[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Scenes/EnemyBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 171.789

[node name="Sprite" type="KinematicBody2D" groups=[
"enemies",
]]

modulate = Color( 0.0335693, 0.859375, 0.0658274, 1 )
position = Vector2( 439.733, 164.184 )
z_index = 30
input_pickable = false
collision_layer = 2
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Z Index" ]
__meta__ = {
"_edit_group_": true
}
fire_rate = 0.3
Bullet = ExtResource( 2 )
speed = 600

[node name="Sprite" type="Sprite" parent="." index="0"]

modulate = Color( 0.132387, 0.96875, 0.0378418, 1 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Scan" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 32
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scan" index="0"]

shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="area_entered" from="Scan" to="." method="_on_Scan_area_entered"]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]


